cambio de las seccion style

--- a/lista de tareas/css/style.css
+++ b/lista de tareas/css/style.css
@@ -81,14 +81,21 @@ body {
     margin-bottom: 40px;
 }
 
+
 .seccion {
     background-color: #fff;
     padding: 20px;
     width: 250px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin-top: 50px; 
 }
 
+.seccion:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.562);
+}
 .extra-buttons .btn-extra {
     margin-top: 10px;
     background-color: #ddd;
