--- a/lista de tareas/css/style.css
+++ b/lista de tareas/css/style.css
@@ -55,9 +55,9 @@ body {
 }
 
 .btn {
-    padding: 12px 24px;
+    padding: 0.7rem 1.4rem;
     font-size: 16px;
-    border: none;
+    border: 2px solid #333;
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease;
