--- a/lista de tareas/css/modal.css
+++ b/lista de tareas/css/modal.css
@@ -43,7 +43,7 @@
 .modal-content-head img{
     width: 20%;
     height: auto;
-    margin: 12% 0 10% 0;
+    margin: 10% 0 10% 0;
     animation: shake 0.5s ease-in-out; /* Shake animation for the error icon */
 }
 .modal-content-body{
@@ -55,31 +55,12 @@
 }
 .modal-content-foot{
     display: flex;
-    justify-content: center;
+    justify-content:space-evenly;
     align-items: center;
     width: 100%;
     padding: 5% 0;
 }
-.close-button {
-    border: none;
-    width: 70%;
-    padding: 0.8rem 0;
-    margin: 0;
-    border-radius: 8px;
-    font-size: 1rem;
-    font-weight: normal;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-    text-align: center;
-}
 
-.close-button:hover {
-    transform: scale(1.05); /* Slight zoom effect */
-}
-
-.close-button:active {
-    transform: scale(1); /* Reset zoom effect */
-}
 
 .modal-content h2 {
     font-size: 26px;
